# matter_adaptive_lighting

./: .gitignore  AGENTS.md  README.md  repository.yaml
matter-adaptive-lighting/: Dockerfile  config.example.yaml  config.yaml  pyproject.toml
matter-adaptive-lighting/src/matter_adaptive_lighting/: __init__.py  __main__.py  config.py  curve.py  daemon.py  lights.py  sun.py  ws.py
matter-adaptive-lighting/tests/: test_config.py  test_curve.py  test_lights.py
