[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[project]
name = "matter-adaptive-lighting"
version = "0.1.0"
description = "Sun-tracking color temperature for Matter CCT lights, via the Home Assistant Matter Server"
requires-python = ">=3.12"
dependencies = [
    "websockets>=12",
    "PyYAML>=6",
    "astral>=3.2",
]

[project.scripts]
matter-adaptive-lighting = "matter_adaptive_lighting.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.15",
    "ty>=0.0.57",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
